--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=TEST-Tyrell
+APP_NAME=TEST-TyrellSys
 APP_ENV=local
 APP_KEY=base64:j8d6W+tGxkQ8kzgWzI7+/9QRpHgV9HS7zSYCaut3Eqk=
 APP_DEBUG=true
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=solitaire
+DB_DATABASE=test-tyrellsys
 DB_USERNAME=root
-DB_PASSWORD=M@xv3c2021
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
